[gd_scene load_steps=8 format=3 uid="uid://dw8kq5hce4irk"]

[ext_resource type="FontFile" uid="uid://bevs4mlbet5wb" path="res://Resources/Fonts/alagard.ttf" id="1_3te1i"]
[ext_resource type="Script" path="res://Scripts/UI/item_card.gd" id="1_w18q7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lree3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vun5"]
bg_color = Color(0.246202, 0.289362, 0.813886, 1)

[sub_resource type="Animation" id="Animation_22j6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackSide:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(81.5, 96.5)]
}

[sub_resource type="Animation" id="Animation_h3qwg"]
resource_name = "flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1), Vector2(-1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_toggle_sides"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackSide:pivot_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(81.5, 96.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0d6j1"]
_data = {
"RESET": SubResource("Animation_22j6u"),
"flip": SubResource("Animation_h3qwg")
}

[node name="ItemCard" type="Panel"]
custom_minimum_size = Vector2(230, 250)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1640.0
offset_bottom = -850.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(140, 115)
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lree3")
script = ExtResource("1_w18q7")

[node name="LockOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.517647, 0.517647, 0.517647, 0.701961)

[node name="FrontSide" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -99.0
offset_right = 102.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FrontSide"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="FrontSide/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 3
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="FrontSide/VBoxContainer"]
custom_minimum_size = Vector2(125, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3te1i")
theme_override_font_sizes/font_size = 20
text = "Item Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="FrontSide/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="CostLabel" type="Label" parent="FrontSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3te1i")
theme_override_font_sizes/font_size = 20
text = "100 KP"

[node name="OwnedCountLabel" type="Label" parent="FrontSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3te1i")
theme_override_font_sizes/font_size = 20

[node name="PurchaseButton" type="Button" parent="FrontSide/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3te1i")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_8vun5")
text = "Purchase"

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0d6j1")
}

[node name="BackSide" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -101.0
offset_right = 122.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-1, 1)
pivot_offset = Vector2(81.5, 96.5)

[node name="VBoxContainer" type="VBoxContainer" parent="BackSide"]
layout_mode = 2

[node name="ContextLabel" type="Label" parent="BackSide/VBoxContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3te1i")
theme_override_font_sizes/font_size = 17
text = "Item Description"
autowrap_mode = 2
